style: made issue card list overflow with custom scroll bar, column title sticks at the top during scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
